# HRC

./: CMakeLists.txt  Concept.drawio  README.md
include/: ImageProcessor.hpp
src/: ImageProcessor.cpp  main.cpp
